--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
