--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ Server.port=8090
 #spring.datasource.username=SA
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/RamaDeviDc
+spring.datasource.username=postgres
+spring.datasource.password=rama
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
